<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2F2F2F"
    android:orientation="vertical"
    tools:context=".MainActivity3">

    <LinearLayout
        android:id="@+id/backbutton1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="32dp"
        android:paddingStart="16dp"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_arrow_back_24px"/>

        <View
            android:layout_width="120dp"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Weight"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="#f6f6f6"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/weightDrop1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="0"
            android:entries="@array/weightDropdown1"
            android:backgroundTint="#f6f6f6"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>

        <TextView
            android:id="@+id/weightVar"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:gravity="right"
            android:text="0"
            android:textSize="40sp"
            android:layout_marginEnd="16dp"
            android:textColor="#ffcb74"
            android:layout_gravity="right"/>

        <TextView
            android:id="@+id/convertToW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="kilogram"
            android:textSize="20sp"
            android:textColor="#F6F6F6"
            android:layout_gravity="right"
            android:layout_marginEnd="16dp"
            android:gravity="bottom"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/weightDrop2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="0"
            android:entries="@array/weightDropdown2"
            android:backgroundTint="#f6f6f6"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>

        <TextView
            android:id="@+id/convWeightVar"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:text="0"
            android:textSize="40sp"
            android:layout_marginEnd="16dp"
            android:textColor="#ffcb74"
            android:layout_gravity="right"
            android:gravity="right"/>

        <TextView
            android:id="@+id/convertFromW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="gram"
            android:textSize="20sp"
            android:textColor="#F6F6F6"
            android:layout_gravity="right"
            android:layout_marginEnd="16dp"
            android:gravity="bottom"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginBottom="32dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/buttonSeven"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#2F2F2F"
                    android:text="@string/seven"
                    android:textColor="#F6F6F6"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"/>

                <Button
                    android:id="@+id/buttonEight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#2F2F2F"
                    android:text="@string/eight"
                    android:textColor="#F6F6F6"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"/>

                <Button
                    android:id="@+id/buttonNine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#2F2F2F"
                    android:text="@string/nine"
                    android:textColor="#F6F6F6"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/buttonFour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#2F2F2F"
                    android:text="@string/four"
                    android:textColor="#F6F6F6"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"/>

                <Button
                    android:id="@+id/buttonFive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#2F2F2F"
                    android:text="@string/five"
                    android:textColor="#F6F6F6"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"/>

                <Button
                    android:id="@+id/buttonSix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#2F2F2F"
                    android:text="@string/six"
                    android:textColor="#F6F6F6"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/buttonOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#2F2F2F"
                    android:text="@string/one"
                    android:textColor="#F6F6F6"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"/>

                <Button
                    android:id="@+id/buttonTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#2F2F2F"
                    android:text="@string/two"
                    android:textColor="#F6F6F6"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"/>

                <Button
                    android:id="@+id/buttonThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#2F2F2F"
                    android:text="@string/three"
                    android:textColor="#F6F6F6"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right">

                <Button
                    android:id="@+id/buttonZero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:background="#2F2F2F"
                    android:text="@string/zero"
                    android:textColor="#F6F6F6"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <Button
                    android:id="@+id/buttonDot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:background="#2F2F2F"
                    android:text="@string/dot"
                    android:textColor="#F6F6F6"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="32dp">

            <Button
                android:id="@+id/Clear"
                android:layout_width="70dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/buttonbackground"
                android:text="@string/clear"
                android:textSize="20sp"
                android:textColor="#F6F6F6"
                android:textStyle="bold"
                android:elevation="10dp"/>

            <LinearLayout
                android:id="@+id/deleteButton"
                android:clickable="true"
                android:layout_width="70dp"
                android:layout_height="110dp"
                android:background="@drawable/buttonbackground"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:elevation="10dp">

                <ImageView
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:src="@drawable/ic_backspace_24px"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>